# FastCopyTool

./: LICENSE  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sys_utils.rs
src/components/: Introduction.vue
src/ipc/: system.ts
src/router/: router.ts
src/views/: HomePage.vue
