[package]
name = "FastCopyTool"
version = "1.0.0"
description = "A fast multi-threaded file copier for all platforms."
authors = ["www.kevinc.ltd"]
license = "MIT"
repository = "https://github.com/czf0613/FastCopyTool.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "dialog-message", "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.10"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
